<resources>
    <string name="app_name">Bracelet</string>
    <string name="to_login">点此登录</string>
    <string name="get_recipe">点此获取食谱</string>
    <string name="edit_user_info">编辑资料</string>
    <string name="edit_password">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="username">昵称</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="phone">手机</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="login">登录</string>
    <string name="to_register">新人注册</string>
    <string name="register">注册</string>
    <string name="cancel">取消</string>
    <string name="reset_password">忘记密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="tip_datapick">点击此处选择日期</string>
    <string name="ok">确认</string>
    <string name="verify_code">验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="steps">今日步数</string>
    <string name="kilometre">今日步行</string>
    <string name="sleep">昨晚睡眠</string>
    <string name="bandBracelet">绑定设备</string>
    <string name="bandedBracelet">解除绑定</string>
    <string name="refresh">刷新</string>
    <string name="heart_rate">心率</string>
    <string name="like_foods">饮食偏好</string>
    <string name="add_friend">添加好友</string>
    <string name="friend_phone_hint">请输入要添加好友的手机号</string>

    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="action_connect">Connect</string>
    <string name="action_arduinocode">Show Arduino code</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_settings"></string>
</resources>
