<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:background="@drawable/background_card"
            android:layout_marginTop="20dp"
            android:layout_height="70dp">

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:textSize="18sp"
                android:text="@string/phone"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                app:bootstrapBrand="primary"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:inputType="phone"
                android:textColor="#000000"
                android:textSize="18sp"
                android:maxLength="11"
                android:layout_toEndOf="@id/phone_label"
                android:layout_toRightOf="@id/phone_label"
                app:bootstrapBrand="info"
                app:bootstrapSize="md"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/verify_code_layout"
            android:layout_width="match_parent"
            android:background="@drawable/background_card"
            android:layout_height="70dp"
            android:layout_below="@id/phone_layout">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_get_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/get_verify_code"
                android:layout_margin="10dp"
                app:bootstrapBrand="success"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edit_verify_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_toEndOf="@id/btn_get_verify_code"
                android:layout_toRightOf="@id/btn_get_verify_code"
                app:bootstrapBrand="info"
                app:bootstrapSize="md"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:background="@drawable/background_card"
            android:layout_height="70dp"
            android:layout_below="@id/verify_code_layout">

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:textSize="18sp"
                android:text="@string/password"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                app:bootstrapBrand="primary"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_toEndOf="@id/password_label"
                android:layout_toRightOf="@id/password_label"
                app:bootstrapBrand="info"
                app:bootstrapSize="md"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="match_parent"
            android:background="@drawable/background_card"
            android:layout_height="70dp"
            android:layout_below="@id/password_layout">

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:id="@+id/confirm_password_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:textSize="18sp"
                android:text="@string/confirm_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                app:bootstrapBrand="primary"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_toEndOf="@id/confirm_password_label"
                android:layout_toRightOf="@id/confirm_password_label"
                app:bootstrapBrand="info"
                app:bootstrapSize="md"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_password_layout"
            android:layout_marginTop="10dp">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>